--- a/libs/locales/hi-IN/apps-journeys-admin.json
+++ b/libs/locales/hi-IN/apps-journeys-admin.json
@@ -666,6 +666,7 @@
   "Use This Template": "Use This Template",
   "Add Journey to Team": "Add Journey to Team",
   "Use this template to make it your journey": "Use this template to make it your journey",
+  "Use this template to see more!": "Use this template to see more!",
   "Related Templates": "Related Templates",
   "Before You Start": "Before You Start",
   "Please review these documents:": "Please review these documents:",
@@ -704,6 +705,8 @@
   "<0>Appears on <2>{{ count }}</2> card</0>_other": "<0>Appears on <2>{{ count }}</2> cards</0>",
   "<0>Journey Templates</0><1>in</1><2>{{firstLanguage}}</2>_one": "<0>Journey Templates</0><1>in</1><2>{{firstLanguage}}</2>",
   "<0>Journey Templates</0><1>in</1><2>{{firstLanguage}}</2>_other": "<0>Journey Templates</0><1>in</1><2>{{count}} languages</2>",
+  "{{count}} more cards_one": "{{count}} more card",
+  "{{count}} more cards_other": "{{count}} more cards",
   "{{count}} Cards_one": "{{count}} Card",
   "{{count}} Cards_other": "{{count}} Cards",
   "{{count}} Videos_one": "{{count}} Video",
