chore: new translations apps-journeys-admin.json Tagalog

--- a/libs/locales/tl-PH/apps-journeys-admin.json
+++ b/libs/locales/tl-PH/apps-journeys-admin.json
@@ -666,6 +666,7 @@
   "Use This Template": "Gamitin ang Template na Ito",
   "Add Journey to Team": "Add Journey to Team",
   "Use this template to make it your journey": "Gamitin ang template na ito upang gawin itong iyong paglalakbay",
+  "Use this template to see more!": "Use this template to see more!",
   "Related Templates": "Mga Kaugnay na Template",
   "Before You Start": "Bago ka magsimula",
   "Please review these documents:": "Pakisuri ang mga dokumentong ito:",
@@ -704,6 +705,8 @@
   "<0>Appears on <2>{{ count }}</2> card</0>_other": "<0>Appears on <2>{{ count }}</2> cards</0>",
   "<0>Journey Templates</0><1>in</1><2>{{firstLanguage}}</2>_one": "<0>Mga Template ng Paglalakbay</0><1>sa</1><2>{{firstLanguage}}</2>",
   "<0>Journey Templates</0><1>in</1><2>{{firstLanguage}}</2>_other": "<0>Mga Template ng Paglalakbay</0><1>sa</1><2>{{count}} mga wika</2>",
+  "{{count}} more cards_one": "{{count}} more card",
+  "{{count}} more cards_other": "{{count}} more cards",
   "{{count}} Cards_one": "{{count}} Card",
   "{{count}} Cards_other": "{{count}} Mga kard",
   "{{count}} Videos_one": "{{count}} Video",
