--- a/libs/locales/en/apps-journeys-admin.json
+++ b/libs/locales/en/apps-journeys-admin.json
@@ -604,10 +604,11 @@
   "Domain name not updated": "Domain name not updated",
   "Custom domain updated": "Custom domain updated",
   "Default journey set": "Default journey set",
-  "must be a valid URL": "must be a valid URL",
+  "Must be a valid URL": "Must be a valid URL",
   "Domain name is a required field": "Domain name is a required field",
   "Domain Settings": "Domain Settings",
   "Default Journey": "Default Journey",
+  "Copied": "Copied",
   "DNS Config": "DNS Config",
   "Status": "Status",
   "A": "A",
