fix: has custom domain var

--- a/libs/locales/en/apps-journeys-admin.json
+++ b/libs/locales/en/apps-journeys-admin.json
@@ -601,8 +601,10 @@
   "Journey will be copied to selected team.": "Journey will be copied to selected team.",
   "Select Team": "Select Team",
   "Copy to ...": "Copy to ...",
-  "Domain name not updated": "Domain name not updated",
+  "This domain is already connected to another NextSteps Team": "This domain is already connected to another NextSteps Team",
+  "Something went wrong, please reload the page and try again": "Something went wrong, please reload the page and try again",
   "Custom domain updated": "Custom domain updated",
+  "Default journey deleted": "Default journey deleted",
   "Default journey set": "Default journey set",
   "Must be a valid URL": "Must be a valid URL",
   "Domain name is a required field": "Domain name is a required field",
@@ -619,7 +621,8 @@
   "Instructions": "Instructions",
   "NextSteps provides all journeys with a your.nextstep.is URL. However, to provide greater personalization and flexibility to your team, you can instead add a custom domain. To get started you’ll need to purchase a domain, complete the form below, and point it to NextSteps servers.": "NextSteps provides all journeys with a your.nextstep.is URL. However, to provide greater personalization and flexibility to your team, you can instead add a custom domain. To get started you’ll need to purchase a domain, complete the form below, and point it to NextSteps servers.",
   "Domain Name": "Domain Name",
-  "Reset": "Reset",
+  "Disconnect": "Disconnect",
+  "Connect": "Connect",
   "Create Team": "Create Team",
   "Create": "Create",
   "Private: Visible only to your team": "Private: Visible only to your team",
