--- a/libs/locales/en/apps-journeys-admin.json
+++ b/libs/locales/en/apps-journeys-admin.json
@@ -601,8 +601,9 @@
   "Journey will be copied to selected team.": "Journey will be copied to selected team.",
   "Select Team": "Select Team",
   "Copy to ...": "Copy to ...",
-  "This domain is already connected to another NextSteps Team": "This domain is already connected to another NextSteps Team",
   "Something went wrong, please reload the page and try again": "Something went wrong, please reload the page and try again",
+  "This domain is already connected to another NextSteps Team": "This domain is already connected to another NextSteps Team",
+  "Cannot add this domain since it's already in use by your accound": "Cannot add this domain since it's already in use by your accound",
   "Custom domain updated": "Custom domain updated",
   "Default journey deleted": "Default journey deleted",
   "Default journey set": "Default journey set",
