--- a/libs/locales/en/apps-journeys-admin.json
+++ b/libs/locales/en/apps-journeys-admin.json
@@ -570,11 +570,9 @@
   "You've already used {{userEmail}}.": "You've already used {{userEmail}}.",
   "Sign in with {{service}} to continue": "Sign in with {{service}} to continue",
   "Please enter your email address": "Please enter your email address",
-  "Log in or Sign up": "Log in or Sign up",
-  "No account? We'll create one for you automatically.": "No account? We'll create one for you automatically.",
   "OR": "OR",
   "Enter your email address here": "Enter your email address here",
-  "Sign in with email": "Sign in with email",
+  "Continue with email": "Continue with email",
   "Enter your password": "Enter your password",
   "The email and password you entered don't match": "The email and password you entered don't match",
   "You have entered an incorrect password too many times. Please try again in a few minutes.": "You have entered an incorrect password too many times. Please try again in a few minutes.",
@@ -595,7 +593,9 @@
   "Sign Up": "Sign Up",
   "Check your email": "Check your email",
   "Follow the instructions sent to {{userEmail}} to recover your password": "Follow the instructions sent to {{userEmail}} to recover your password",
-  "Sign in with {{service}}": "Sign in with {{service}}",
+  "Continue with {{service}}": "Continue with {{service}}",
+  "New account": "New account",
+  "Log In": "Log In",
   "Active": "Active",
   "Archived": "Archived",
   "Strategy": "Strategy",
