docs: docker issues

--- a/apps/docs/docs/02-getting-started/03-microservice-databases.mdx
+++ b/apps/docs/docs/02-getting-started/03-microservice-databases.mdx
@@ -41,3 +41,9 @@ nx run-many --all --target=prisma-migrate
 ```shell
 nx run-many --all --target=prisma-seed
 ```
+
+## Common Issues
+
+### prisma-generate failing
+
+If prisma-generate is failing on Mac, please ensure Docker Desktop is updated to at least version 4.28.0
