--- a/apps/docs/docs/02-getting-started/03-microservice-databases.mdx
+++ b/apps/docs/docs/02-getting-started/03-microservice-databases.mdx
@@ -46,15 +46,25 @@ nx run-many --all --target=prisma-seed
 
 ### prisma-generate failing
 
-If prisma-generate is failing on Mac, run the following reset command on api-journeys:
+If prisma-generate is failing, try running:
 
 ```shell
-nx run prisma-reset api-journeys
+nx run-many -t prisma-reset --all
 ```
+
+#### command failed because of mmdc
+
+If prisma generate fails with a error message similar to the one below:
 
 ```shell
 Command failed: "/workspaces/core/node_modules/-bin/mmdc" -i "/tmp/prisma-erd-q0 cpUx/prisma.mmd" -0 "/workspaces/core/apps/api-journeys/db/ERD.svg" -c"/tmp/pri
 sma-erd-qOcpUx/config-json" -p"/tmp/prisma-erd-qOcpUx/puppeteerConfig-json"
 ```
 
-If you get see the above error, it means chromium is unable to allocate a namespace. Docker must be updated so that it can access these permissions from the Mac OS. Please update docker to at least version 4.28.0
+It is related to [prisma-erd-generator](https://www.npmjs.com/package/prisma-erd-generator) attempting to run. Under the hood, it uses puppeteer and chromium to execute. The error this command is experiencing could be related to chromium not being installed, installed incorrectly, or not having the proper permissions to execute.
+
+Here are some steps you can follow to resolve the issue:
+
+- run `sudo apt-get -y install chromium`
+- On Mac update Docker Desktop to at least 4.28.0
+- rebuild your container using latest main
