--- a/libs/locales/en/apps-journeys-admin.json
+++ b/libs/locales/en/apps-journeys-admin.json
@@ -601,29 +601,34 @@
   "Journey will be copied to selected team.": "Journey will be copied to selected team.",
   "Select Team": "Select Team",
   "Copy to ...": "Copy to ...",
-  "Something went wrong, please reload the page and try again": "Something went wrong, please reload the page and try again",
-  "This domain is already connected to another NextSteps Team": "This domain is already connected to another NextSteps Team",
-  "Cannot add this domain since it's already in use by your accound": "Cannot add this domain since it's already in use by your accound",
-  "Custom domain updated": "Custom domain updated",
+  "Domain Settings": "Domain Settings",
+  "Custom Domain Setup": "Custom Domain Setup",
+  "Instructions": "Instructions",
+  "NextSteps provides all journeys with a your.nextstep.is URL. However, to provide greater personalization and flexibility to your team, you can instead add a custom domain. To get started you’ll need to purchase a domain, complete the form below, and point it to NextSteps servers.": "NextSteps provides all journeys with a your.nextstep.is URL. However, to provide greater personalization and flexibility to your team, you can instead add a custom domain. To get started you’ll need to purchase a domain, complete the form below, and point it to NextSteps servers.",
   "Default journey deleted": "Default journey deleted",
   "Default journey set": "Default journey set",
-  "Must be a valid URL": "Must be a valid URL",
-  "Domain name is a required field": "Domain name is a required field",
-  "Domain Settings": "Domain Settings",
   "Default Journey": "Default Journey",
+  "The default Journey will be available at {{ customDomain }}": "The default Journey will be available at {{ customDomain }}",
   "Copied": "Copied",
   "DNS Config": "DNS Config",
-  "Status": "Status",
+  "Valid Configuration": "Valid Configuration",
+  "Invalid Configuration": "Invalid Configuration",
+  "Pending Verfication": "Pending Verfication",
+  "Loading": "Loading",
   "A": "A",
   "CNAME": "CNAME",
   "76.76.21.21": "76.76.21.21",
   "cname.vercel-dns.com": "cname.vercel-dns.com",
-  "Custom Domain Setup": "Custom Domain Setup",
-  "Instructions": "Instructions",
-  "NextSteps provides all journeys with a your.nextstep.is URL. However, to provide greater personalization and flexibility to your team, you can instead add a custom domain. To get started you’ll need to purchase a domain, complete the form below, and point it to NextSteps servers.": "NextSteps provides all journeys with a your.nextstep.is URL. However, to provide greater personalization and flexibility to your team, you can instead add a custom domain. To get started you’ll need to purchase a domain, complete the form below, and point it to NextSteps servers.",
+  "Domain {{ customDomainName }} was added to a different team. Please complete verification to add it to this team instead.": "Domain {{ customDomainName }} was added to a different team. Please complete verification to add it to this team instead.",
+  "Domain name is a required field": "Domain name is a required field",
+  "Must be a valid URL": "Must be a valid URL",
+  "Something went wrong, please reload the page and try again": "Something went wrong, please reload the page and try again",
+  "This domain is already connected to another NextSteps Team": "This domain is already connected to another NextSteps Team",
+  "Cannot add this domain since it's already in use": "Cannot add this domain since it's already in use",
+  "Custom domain updated": "Custom domain updated",
   "Domain Name": "Domain Name",
-  "Disconnect": "Disconnect",
   "Connect": "Connect",
+  "Disconnect": "Disconnect",
   "Create Team": "Create Team",
   "Create": "Create",
   "Private: Visible only to your team": "Private: Visible only to your team",
