chore: new translations apps-journeys-admin.json French

--- a/libs/locales/fr-FR/apps-journeys-admin.json
+++ b/libs/locales/fr-FR/apps-journeys-admin.json
@@ -599,6 +599,29 @@
   "Journey will be copied to selected team.": "Le voyage sera copié dans l'équipe sélectionnée.",
   "Select Team": "Sélectionne l'équipe",
   "Copy to ...": "Copie à ...",
+  "Domain Settings": "Paramètres du domaine",
+  "Custom Domain Setup": "Configuration d'un domaine personnalisé",
+  "Instructions": "Instructions",
+  "NextSteps provides all journeys with a your.nextstep.is URL. However, to provide greater personalization and flexibility to your team, you can instead add a custom domain. To get started you’ll need to purchase a domain, complete the form below, and point it to NextSteps servers.": "NextSteps fournit à tous les voyages une URL your.nextstep.is. Cependant, pour offrir plus de personnalisation et de flexibilité à ton équipe, tu peux à la place ajouter un domaine personnalisé. Pour commencer, tu devras acheter un domaine, remplir le formulaire ci-dessous et le faire pointer vers les serveurs de NextSteps.",
+  "Default journey deleted": "Voyage par défaut supprimé",
+  "Default journey set": "Voyage par défaut",
+  "Default Journey": "Voyage par défaut",
+  "The default Journey will be available at {{ customDomain }}": "Le voyage par défaut sera disponible à l'adresse {{ customDomain }}.",
+  "Copied": "Copié",
+  "DNS Config": "Config DNS",
+  "Valid Configuration": "Configuration valide",
+  "Invalid Configuration": "Configuration non valide",
+  "Pending Verfication": "En attente de vérification",
+  "Loading": "Chargement",
+  "Domain {{ customDomainName }} was added to a different team. Please complete verification to add it to this team instead.": "Le domaine {{ customDomainName }} a été ajouté à une autre équipe. Complète la vérification pour l'ajouter à cette équipe à la place.",
+  "Domain name is a required field": "Le nom de domaine est un champ obligatoire",
+  "Must be a valid URL": "Doit être une URL valide",
+  "Something went wrong, please reload the page and try again": "Quelque chose s'est mal passé, tu peux recharger la page et réessayer.",
+  "This domain is already connected to another NextSteps Team": "Ce domaine est déjà connecté à une autre équipe NextSteps.",
+  "Custom domain updated": "Domaine personnalisé mis à jour",
+  "Domain Name": "Nom de domaine",
+  "Connect": "Connecte-toi",
+  "Disconnect": "Déconnecte-toi",
   "Create Team": "Créer une équipe",
   "Create": "Créer",
   "Private: Visible only to your team": "Privé : Visible uniquement par ton équipe",
@@ -619,6 +642,7 @@
   "Manager": "Gestionnaire",
   "Member": "Membre",
   "Members": "Les membres",
+  "Custom Domain": "Domaine personnalisé",
   "Rename": "Renommer",
   "Invite Teammates": "Invite tes coéquipiers",
   "Invite team members": "Invite les membres de l'équipe",
