chore: new translations apps-journeys-admin.json Spanish

--- a/libs/locales/es-ES/apps-journeys-admin.json
+++ b/libs/locales/es-ES/apps-journeys-admin.json
@@ -599,6 +599,29 @@
   "Journey will be copied to selected team.": "El viaje se copiará al equipo seleccionado.",
   "Select Team": "Seleccionar equipo",
   "Copy to ...": "Copiar a ...",
+  "Domain Settings": "Configuración del dominio",
+  "Custom Domain Setup": "Configuración personalizada del dominio",
+  "Instructions": "Instrucciones",
+  "NextSteps provides all journeys with a your.nextstep.is URL. However, to provide greater personalization and flexibility to your team, you can instead add a custom domain. To get started you’ll need to purchase a domain, complete the form below, and point it to NextSteps servers.": "NextSteps proporciona a todos los trayectos una URL your.nextstep.is. Sin embargo, para proporcionar una mayor personalización y flexibilidad a tu equipo, puedes añadir en su lugar un dominio personalizado. Para empezar, tendrás que comprar un dominio, rellenar el siguiente formulario y apuntarlo a los servidores de NextSteps.",
+  "Default journey deleted": "Viaje por defecto eliminado",
+  "Default journey set": "Viaje predeterminado",
+  "Default Journey": "Viaje por defecto",
+  "The default Journey will be available at {{ customDomain }}": "El Viaje por defecto estará disponible en {{ customDomain }}.",
+  "Copied": "Copiado",
+  "DNS Config": "Configuración DNS",
+  "Valid Configuration": "Configuración válida",
+  "Invalid Configuration": "Configuración no válida",
+  "Pending Verfication": "Pendiente de verificación",
+  "Loading": "Cargando",
+  "Domain {{ customDomainName }} was added to a different team. Please complete verification to add it to this team instead.": "Dominio {{ customDomainName }} se añadió a otro equipo. Por favor, completa la verificación para añadirlo a este equipo.",
+  "Domain name is a required field": "El nombre de dominio es un campo obligatorio",
+  "Must be a valid URL": "Debe ser una URL válida",
+  "Something went wrong, please reload the page and try again": "Algo ha ido mal, por favor recarga la página e inténtalo de nuevo",
+  "This domain is already connected to another NextSteps Team": "Este dominio ya está conectado a otro Equipo NextSteps",
+  "Custom domain updated": "Dominio personalizado actualizado",
+  "Domain Name": "Nombre de dominio",
+  "Connect": "Conecta",
+  "Disconnect": "Desconecta",
   "Create Team": "Crear equipo",
   "Create": "Crea",
   "Private: Visible only to your team": "Privado: Visible sólo para tu equipo",
@@ -619,6 +642,7 @@
   "Manager": "Director",
   "Member": "Miembro",
   "Members": "Miembros",
+  "Custom Domain": "Dominio personalizado",
   "Rename": "Cambia el nombre de",
   "Invite Teammates": "Invita a compañeros de equipo",
   "Invite team members": "Invita a los miembros del equipo",
