chore: new translations apps-journeys-admin.json Japanese

--- a/libs/locales/ja-JP/apps-journeys-admin.json
+++ b/libs/locales/ja-JP/apps-journeys-admin.json
@@ -599,6 +599,29 @@
   "Journey will be copied to selected team.": "旅は選択されたチームにコピーされる。",
   "Select Team": "セレクト・チーム",
   "Copy to ...": "コピーする",
+  "Domain Settings": "ドメイン設定",
+  "Custom Domain Setup": "カスタムドメインの設定",
+  "Instructions": "使用方法",
+  "NextSteps provides all journeys with a your.nextstep.is URL. However, to provide greater personalization and flexibility to your team, you can instead add a custom domain. To get started you’ll need to purchase a domain, complete the form below, and point it to NextSteps servers.": "NextStepsはすべてのジャーニーにyour.nextstep.is URLを提供しています。しかし、よりパーソナライズされた柔軟性をチームに提供するために、カスタムドメインを追加することができます。まずはドメインを購入し、下記のフォームにご記入の上、NextStepsのサーバーを指定してください。",
+  "Default journey deleted": "削除されたデフォルトの旅",
+  "Default journey set": "デフォルトの旅セット",
+  "Default Journey": "デフォルトの旅",
+  "The default Journey will be available at {{ customDomain }}": "デフォルトのジャーニーは、 {{ customDomain }}。",
+  "Copied": "コピー",
+  "DNS Config": "DNSコンフィグ",
+  "Valid Configuration": "有効な構成",
+  "Invalid Configuration": "無効な設定",
+  "Pending Verfication": "検証中",
+  "Loading": "ローディング",
+  "Domain {{ customDomainName }} was added to a different team. Please complete verification to add it to this team instead.": "Domain {{ customDomainName }} は別のチームに追加されました。代わりにこのチームに追加するには、検証を完了してください。",
+  "Domain name is a required field": "ドメイン名は必須項目です。",
+  "Must be a valid URL": "有効なURLでなければならない",
+  "Something went wrong, please reload the page and try again": "ページが正しく表示されません。",
+  "This domain is already connected to another NextSteps Team": "このドメインはすでに別のNextStepsチームに接続されています。",
+  "Custom domain updated": "カスタムドメイン更新",
+  "Domain Name": "ドメイン名",
+  "Connect": "接続",
+  "Disconnect": "切断",
   "Create Team": "チーム結成",
   "Create": "作成",
   "Private: Visible only to your team": "非公開：チーム内のみ閲覧可能",
@@ -619,6 +642,7 @@
   "Manager": "マネージャー",
   "Member": "メンバー",
   "Members": "メンバー",
+  "Custom Domain": "カスタムドメイン",
   "Rename": "名前変更",
   "Invite Teammates": "チームメイトを招待する",
   "Invite team members": "チームメンバーを招待する",
