chore: new translations apps-journeys-admin.json Russian

--- a/libs/locales/ru-RU/apps-journeys-admin.json
+++ b/libs/locales/ru-RU/apps-journeys-admin.json
@@ -599,6 +599,29 @@
   "Journey will be copied to selected team.": "Путешествие будет скопировано в выбранную команду.",
   "Select Team": "Выбрать команду",
   "Copy to ...": "Скопировать в ...",
+  "Domain Settings": "Настройки домена",
+  "Custom Domain Setup": "Настройка пользовательского домена",
+  "Instructions": "Инструкции",
+  "NextSteps provides all journeys with a your.nextstep.is URL. However, to provide greater personalization and flexibility to your team, you can instead add a custom domain. To get started you’ll need to purchase a domain, complete the form below, and point it to NextSteps servers.": "NextSteps предоставляет всем путешествиям URL-адрес your.nextstep.is. Однако, чтобы обеспечить большую персонализацию и гибкость для твоей команды, ты можешь вместо этого добавить собственный домен. Чтобы начать работу, тебе нужно будет приобрести домен, заполнить форму ниже и указать его на серверы NextSteps.",
+  "Default journey deleted": "Путешествие по умолчанию удалено",
+  "Default journey set": "Набор для путешествия по умолчанию",
+  "Default Journey": "Путешествие по умолчанию",
+  "The default Journey will be available at {{ customDomain }}": "Путешествие по умолчанию будет доступно по адресу {{ customDomain }}.",
+  "Copied": "Скопировано",
+  "DNS Config": "Настройка DNS",
+  "Valid Configuration": "Правильная конфигурация",
+  "Invalid Configuration": "Неверная конфигурация",
+  "Pending Verfication": "Ожидает проверки",
+  "Loading": "Загрузка",
+  "Domain {{ customDomainName }} was added to a different team. Please complete verification to add it to this team instead.": "Домен {{ customDomainName }} был добавлен в другую команду. Пройди верификацию, чтобы добавить его в эту команду.",
+  "Domain name is a required field": "Доменное имя - обязательное поле",
+  "Must be a valid URL": "Это должен быть правильный URL",
+  "Something went wrong, please reload the page and try again": "Что-то пошло не так, пожалуйста, перезагрузите страницу и попробуйте снова",
+  "This domain is already connected to another NextSteps Team": "Этот домен уже подключен к другой команде NextSteps Team",
+  "Custom domain updated": "Обновление пользовательского домена",
+  "Domain Name": "Доменное имя",
+  "Connect": "Подключи",
+  "Disconnect": "Отключи",
   "Create Team": "Создать команду",
   "Create": "Создавать",
   "Private: Visible only to your team": "Приватный: Виден только твоей команде",
@@ -619,6 +642,7 @@
   "Manager": "Менеджер",
   "Member": "Член",
   "Members": "Члены",
+  "Custom Domain": "Пользовательский домен",
   "Rename": "Переименовать",
   "Invite Teammates": "Пригласить товарищей по команде",
   "Invite team members": "Пригласить членов команды",
