chore: new translations apps-journeys-admin.json Turkish

--- a/libs/locales/tr-TR/apps-journeys-admin.json
+++ b/libs/locales/tr-TR/apps-journeys-admin.json
@@ -599,6 +599,29 @@
   "Journey will be copied to selected team.": "Yolculuk seçilen ekibe kopyalanacaktır.",
   "Select Team": "Takım Seçiniz",
   "Copy to ...": "Kopyala ...",
+  "Domain Settings": "Etki Alanı Ayarları",
+  "Custom Domain Setup": "Özel Alan Adı Kurulumu",
+  "Instructions": "Talimatlar",
+  "NextSteps provides all journeys with a your.nextstep.is URL. However, to provide greater personalization and flexibility to your team, you can instead add a custom domain. To get started you’ll need to purchase a domain, complete the form below, and point it to NextSteps servers.": "NextSteps, tüm yolculuklara bir your.nextstep.is URL'si sağlar. Ancak, ekibinize daha fazla kişiselleştirme ve esneklik sağlamak için bunun yerine özel bir alan adı ekleyebilirsiniz. Başlamak için bir alan adı satın almanız, aşağıdaki formu doldurmanız ve NextSteps sunucularına yönlendirmeniz gerekir.",
+  "Default journey deleted": "Varsayılan yolculuk silindi",
+  "Default journey set": "Varsayılan yolculuk seti",
+  "Default Journey": "Varsayılan Yolculuk",
+  "The default Journey will be available at {{ customDomain }}": "Varsayılan Yolculuk {{ customDomain }}adresinde mevcut olacaktır.",
+  "Copied": "Kopyalandı",
+  "DNS Config": "DNS Yapılandırması",
+  "Valid Configuration": "Geçerli Yapılandırma",
+  "Invalid Configuration": "Geçersiz Yapılandırma",
+  "Pending Verfication": "Doğrulama Bekleniyor",
+  "Loading": "Yükleniyor",
+  "Domain {{ customDomainName }} was added to a different team. Please complete verification to add it to this team instead.": "Domain {{ customDomainName }} farklı bir takıma eklendi. Lütfen bunun yerine bu ekibe eklemek için doğrulamayı tamamlayın.",
+  "Domain name is a required field": "Alan adı gerekli bir alandır",
+  "Must be a valid URL": "Geçerli bir URL olmalıdır",
+  "Something went wrong, please reload the page and try again": "Bir şeyler ters gitti, lütfen sayfayı yeniden yükleyin ve tekrar deneyin",
+  "This domain is already connected to another NextSteps Team": "Bu etki alanı zaten başka bir NextSteps Ekibine bağlı",
+  "Custom domain updated": "Özel alan adı güncellendi",
+  "Domain Name": "Alan Adı",
+  "Connect": "Bağlan",
+  "Disconnect": "Bağlantıyı Kes",
   "Create Team": "Ekip Oluştur",
   "Create": "Oluştur",
   "Private: Visible only to your team": "Özel: Yalnızca ekibiniz tarafından görülebilir",
@@ -619,6 +642,7 @@
   "Manager": "Müdür",
   "Member": "Üye",
   "Members": "Üyeler",
+  "Custom Domain": "Özel Alan Adı",
   "Rename": "Yeniden Adlandır",
   "Invite Teammates": "Takım Arkadaşlarınızı Davet Edin",
   "Invite team members": "Ekip üyelerini davet edin",
