chore: new translations apps-journeys-admin.json Chinese Simplified

--- a/libs/locales/zh-Hans-CN/apps-journeys-admin.json
+++ b/libs/locales/zh-Hans-CN/apps-journeys-admin.json
@@ -599,6 +599,29 @@
   "Journey will be copied to selected team.": "旅程将被复制到选定的团队。",
   "Select Team": "选择团队",
   "Copy to ...": "复制到 ...",
+  "Domain Settings": "域名设置",
+  "Custom Domain Setup": "自定义域名设置",
+  "Instructions": "说明",
+  "NextSteps provides all journeys with a your.nextstep.is URL. However, to provide greater personalization and flexibility to your team, you can instead add a custom domain. To get started you’ll need to purchase a domain, complete the form below, and point it to NextSteps servers.": "NextSteps 为所有旅程提供 your.nextstep.is URL。但是，为了给您的团队提供更大的个性化和灵活性，您可以添加一个自定义域名。要开始使用，您需要购买一个域名，填写下面的表格，并将其指向 NextSteps 服务器。",
+  "Default journey deleted": "删除默认旅程",
+  "Default journey set": "默认旅程设置",
+  "Default Journey": "默认旅程",
+  "The default Journey will be available at {{ customDomain }}": "默认的 \"旅程 \"将在 {{ customDomain }}网站上提供。",
+  "Copied": "复制的",
+  "DNS Config": "DNS 配置",
+  "Valid Configuration": "有效配置",
+  "Invalid Configuration": "配置无效",
+  "Pending Verfication": "待核查",
+  "Loading": "加载中",
+  "Domain {{ customDomainName }} was added to a different team. Please complete verification to add it to this team instead.": "Domain {{ customDomainName }} 已被添加到其他团队。请完成验证，将其添加到此团队中。",
+  "Domain name is a required field": "域名为必填字段",
+  "Must be a valid URL": "必须是有效的 URL",
+  "Something went wrong, please reload the page and try again": "出错了，请重新加载页面并重试",
+  "This domain is already connected to another NextSteps Team": "该域已连接到另一个 NextSteps 团队",
+  "Custom domain updated": "更新自定义域名",
+  "Domain Name": "域名",
+  "Connect": "连接",
+  "Disconnect": "断开",
   "Create Team": "创建团队",
   "Create": "创造",
   "Private: Visible only to your team": "隐私：只有您的团队可以看到",
@@ -619,6 +642,7 @@
   "Manager": "经理",
   "Member": "成员",
   "Members": "会员",
+  "Custom Domain": "自定义域名",
   "Rename": "改名",
   "Invite Teammates": "邀请队友",
   "Invite team members": "邀请团队成员",
