chore: new translations apps-journeys-admin.json Indonesian

--- a/libs/locales/id-ID/apps-journeys-admin.json
+++ b/libs/locales/id-ID/apps-journeys-admin.json
@@ -599,6 +599,29 @@
   "Journey will be copied to selected team.": "Perjalanan akan disalin ke tim yang dipilih.",
   "Select Team": "Pilih Tim",
   "Copy to ...": "Salin ke ...",
+  "Domain Settings": "Pengaturan Domain",
+  "Custom Domain Setup": "Pengaturan Domain Khusus",
+  "Instructions": "Petunjuk",
+  "NextSteps provides all journeys with a your.nextstep.is URL. However, to provide greater personalization and flexibility to your team, you can instead add a custom domain. To get started you’ll need to purchase a domain, complete the form below, and point it to NextSteps servers.": "NextSteps menyediakan semua perjalanan dengan URL your.nextstep.is. Namun, untuk memberikan personalisasi dan fleksibilitas yang lebih besar pada tim Anda, Anda bisa menambahkan domain khusus. Untuk memulai, Anda perlu membeli domain, mengisi formulir di bawah ini, dan mengarahkannya ke server NextSteps.",
+  "Default journey deleted": "Perjalanan default dihapus",
+  "Default journey set": "Pengaturan perjalanan default",
+  "Default Journey": "Perjalanan Default",
+  "The default Journey will be available at {{ customDomain }}": "Journey default akan tersedia di {{ customDomain }}",
+  "Copied": "Disalin",
+  "DNS Config": "Konfigurasi DNS",
+  "Valid Configuration": "Konfigurasi yang Valid",
+  "Invalid Configuration": "Konfigurasi Tidak Valid",
+  "Pending Verfication": "Verifikasi Tertunda",
+  "Loading": "Memuat",
+  "Domain {{ customDomainName }} was added to a different team. Please complete verification to add it to this team instead.": "Domain {{ customDomainName }} telah ditambahkan ke tim yang berbeda. Silakan selesaikan verifikasi untuk menambahkannya ke tim ini.",
+  "Domain name is a required field": "Nama domain adalah bidang yang wajib diisi",
+  "Must be a valid URL": "Harus berupa URL yang valid",
+  "Something went wrong, please reload the page and try again": "Terjadi kesalahan, muat ulang halaman dan coba lagi",
+  "This domain is already connected to another NextSteps Team": "Domain ini sudah terhubung dengan Tim NextSteps lainnya",
+  "Custom domain updated": "Domain khusus diperbarui",
+  "Domain Name": "Nama Domain",
+  "Connect": "Menghubungkan",
+  "Disconnect": "Putuskan sambungan",
   "Create Team": "Buat Tim",
   "Create": "Membuat",
   "Private: Visible only to your team": "Pribadi: Hanya dapat dilihat oleh tim Anda",
@@ -619,6 +642,7 @@
   "Manager": "Manajer",
   "Member": "Anggota",
   "Members": "Anggota",
+  "Custom Domain": "Domain Khusus",
   "Rename": "Ganti nama",
   "Invite Teammates": "Undang Rekan Tim",
   "Invite team members": "Undang anggota tim",
