--- a/libs/locales/tl-PH/apps-journeys-admin.json
+++ b/libs/locales/tl-PH/apps-journeys-admin.json
@@ -599,6 +599,29 @@
   "Journey will be copied to selected team.": "Kokopyahin ang paglalakbay sa napiling koponan.",
   "Select Team": "Piliin ang grupo",
   "Copy to ...": "Kopyahin sa ...",
+  "Domain Settings": "Domain Settings",
+  "Custom Domain Setup": "Custom Domain Setup",
+  "Instructions": "Instructions",
+  "NextSteps provides all journeys with a your.nextstep.is URL. However, to provide greater personalization and flexibility to your team, you can instead add a custom domain. To get started you’ll need to purchase a domain, complete the form below, and point it to NextSteps servers.": "NextSteps provides all journeys with a your.nextstep.is URL. However, to provide greater personalization and flexibility to your team, you can instead add a custom domain. To get started you’ll need to purchase a domain, complete the form below, and point it to NextSteps servers.",
+  "Default journey deleted": "Default journey deleted",
+  "Default journey set": "Default journey set",
+  "Default Journey": "Default Journey",
+  "The default Journey will be available at {{ customDomain }}": "The default Journey will be available at {{ customDomain }}",
+  "Copied": "Copied",
+  "DNS Config": "DNS Config",
+  "Valid Configuration": "Valid Configuration",
+  "Invalid Configuration": "Invalid Configuration",
+  "Pending Verfication": "Pending Verfication",
+  "Loading": "Loading",
+  "Domain {{ customDomainName }} was added to a different team. Please complete verification to add it to this team instead.": "Domain {{ customDomainName }} was added to a different team. Please complete verification to add it to this team instead.",
+  "Domain name is a required field": "Domain name is a required field",
+  "Must be a valid URL": "Must be a valid URL",
+  "Something went wrong, please reload the page and try again": "Something went wrong, please reload the page and try again",
+  "This domain is already connected to another NextSteps Team": "This domain is already connected to another NextSteps Team",
+  "Custom domain updated": "Custom domain updated",
+  "Domain Name": "Domain Name",
+  "Connect": "Connect",
+  "Disconnect": "Disconnect",
   "Create Team": "Lumikha ng Koponan",
   "Create": "Lumikha",
   "Private: Visible only to your team": "Private: Visible only to your team",
@@ -619,6 +642,7 @@
   "Manager": "Manager",
   "Member": "Miyembro",
   "Members": "Mga miyembro",
+  "Custom Domain": "Custom Domain",
   "Rename": "Palitan ang pangalan",
   "Invite Teammates": "Mag-imbita ng mga Teammates",
   "Invite team members": "Mag-imbita ng mga miyembro ng pangkat",
