--- a/libs/locales/en/apps-journeys-admin.json
+++ b/libs/locales/en/apps-journeys-admin.json
@@ -16,6 +16,7 @@
   "Visitors": "Visitors",
   "Filters": "Filters",
   "A Few Questions": "A Few Questions",
+  "User Insights": "User Insights",
   "a question about onboarding form": "a question about onboarding form",
   "Edit Template": "Edit Template",
   "Access Denied": "Access Denied",
@@ -26,16 +27,18 @@
   "Visitor's Activity": "Visitor's Activity",
   "Visitor Details": "Visitor Details",
   "New Team": "New Team",
+  "Create a Team": "Create a Team",
   "A question about creating a team for the first time.": "A question about creating a team for the first time.",
   "Journey Template": "Journey Template",
   "Journey Templates": "Journey Templates",
   "Sign In": "Sign In",
+  "Create New Account or Log in": "Create New Account or Log in",
+  "A question about sign in": "A question about sign in",
   "Terms and Conditions": "Terms and Conditions",
   "A question about the terms and conditions form": "A question about the terms and conditions form",
   "Required": "Required",
-  "Validate NextStep Email": "Validate NextStep Email",
   "Verify Your Email": "Verify Your Email",
-  "To start making NextSteps journeys": "To start making NextSteps journeys",
+  "Validate NextStep Email": "Validate NextStep Email",
   "Email has been sent to this address with a link to verify your account. If you have not received the email after a few minutes, please check your spam folder.": "Email has been sent to this address with a link to verify your account. If you have not received the email after a few minutes, please check your spam folder.",
   "Resend Validation Email": "Resend Validation Email",
   "Verify With Code Instead": "Verify With Code Instead",
@@ -537,8 +540,9 @@
   "Are you sure you want to change language?": "Are you sure you want to change language?",
   "Reports": "Reports",
   "See all": "See all",
-  "Help us serve you better": "Help us serve you better",
   "Next": "Next",
+  "Create an account": "Create an account",
+  "Let's get you on the journey": "Let's get you on the journey",
   "Feedback & Support": "Feedback & Support",
   "Create Custom Journey": "Create Custom Journey",
   "Template": "Template",
@@ -566,11 +570,9 @@
   "You've already used {{userEmail}}.": "You've already used {{userEmail}}.",
   "Sign in with {{service}} to continue": "Sign in with {{service}} to continue",
   "Please enter your email address": "Please enter your email address",
-  "Log in or Sign up": "Log in or Sign up",
-  "No account? We'll create one for you automatically.": "No account? We'll create one for you automatically.",
   "OR": "OR",
   "Enter your email address here": "Enter your email address here",
-  "Sign in with email": "Sign in with email",
+  "Continue with email": "Continue with email",
   "Enter your password": "Enter your password",
   "The email and password you entered don't match": "The email and password you entered don't match",
   "You have entered an incorrect password too many times. Please try again in a few minutes.": "You have entered an incorrect password too many times. Please try again in a few minutes.",
@@ -591,7 +593,9 @@
   "Sign Up": "Sign Up",
   "Check your email": "Check your email",
   "Follow the instructions sent to {{userEmail}} to recover your password": "Follow the instructions sent to {{userEmail}} to recover your password",
-  "Sign in with {{service}}": "Sign in with {{service}}",
+  "Continue with {{service}}": "Continue with {{service}}",
+  "New account": "New account",
+  "Log In": "Log In",
   "Active": "Active",
   "Archived": "Archived",
   "Strategy": "Strategy",
@@ -646,10 +650,6 @@
   "Members": "Members",
   "Custom Domain": "Custom Domain",
   "Rename": "Rename",
-  "Invite Teammates": "Invite Teammates",
-  "Invite team members": "Invite team members",
-  "Continue": "Continue",
-  "Skip": "Skip",
   "Shared With Me": "Shared With Me",
   "More journeys here": "More journeys here",
   "Journeys are grouped by teams. You can switch between teams by using this dropdown.": "Journeys are grouped by teams. You can switch between teams by using this dropdown.",
@@ -691,6 +691,10 @@
   "Most Relevant": "Most Relevant",
   "No template fully matches your search criteria.": "No template fully matches your search criteria.",
   "Try using fewer filters or look below for templates related to the categories you've selected to search": "Try using fewer filters or look below for templates related to the categories you've selected to search",
+  "We Like Your Choice!": "We Like Your Choice!",
+  "Create a new account or log in to use this template as yours.": "Create a new account or log in to use this template as yours.",
+  "Login with my account": "Login with my account",
+  "Create a new account": "Create a new account",
   "Use This Template": "Use This Template",
   "Add Journey to Team": "Add Journey to Team",
   "Use this template to make it your journey": "Use this template to make it your journey",
@@ -702,8 +706,7 @@
   "{{count}} Videos_one": "{{count}} Video",
   "{{count}} Videos_other": "{{count}} Videos",
   "Related Templates": "Related Templates",
-  "Before You Start": "Before You Start",
-  "Please review these documents:": "Please review these documents:",
+  "Before you start, please review these documents:": "Before you start, please review these documents:",
   "Terms of Use": "Terms of Use",
   "End User License Agreement": "End User License Agreement",
   "Community Guidelines": "Community Guidelines",
