--- a/libs/locales/fr-FR/apps-journeys-admin.json
+++ b/libs/locales/fr-FR/apps-journeys-admin.json
@@ -16,6 +16,7 @@
   "Visitors": "Visiteurs",
   "Filters": "Filtres",
   "A Few Questions": "Quelques questions",
+  "User Insights": "Perspectives pour l'utilisateur",
   "a question about onboarding form": "une question sur le formulaire d'accueil",
   "Edit Template": "Modifier le modèle",
   "Access Denied": "Accès refusé",
@@ -26,16 +27,18 @@
   "Visitor's Activity": "Activité du visiteur",
   "Visitor Details": "Détails sur les visiteurs",
   "New Team": "Nouvelle équipe",
+  "Create a Team": "Créer une équipe",
   "A question about creating a team for the first time.": "Une question sur la création d'une équipe pour la première fois.",
   "Journey Template": "Modèle de voyage",
   "Journey Templates": "Modèles de voyage",
   "Sign In": "S'inscrire",
+  "Create New Account or Log in": "Créer un nouveau compte ou se connecter",
+  "A question about sign in": "Une question sur l'inscription",
   "Terms and Conditions": "Conditions générales d'utilisation",
   "A question about the terms and conditions form": "Une question sur le formulaire des conditions générales",
   "Required": "Exigée",
-  "Validate NextStep Email": "Valider le courriel de NextStep",
   "Verify Your Email": "Vérifie ton courriel",
-  "To start making NextSteps journeys": "Pour commencer à faire des voyages NextSteps",
+  "Validate NextStep Email": "Valider le courriel de NextStep",
   "Email has been sent to this address with a link to verify your account. If you have not received the email after a few minutes, please check your spam folder.": "Un courriel a été envoyé à cette adresse avec un lien pour vérifier ton compte. Si tu n'as pas reçu l'email après quelques minutes, vérifie ton dossier spam.",
   "Resend Validation Email": "Renvoyer le courriel de validation",
   "Verify With Code Instead": "Vérifie plutôt avec le code",
@@ -535,8 +538,9 @@
   "Are you sure you want to change language?": "Es-tu sûr de vouloir changer de langue ?",
   "Reports": "Rapports",
   "See all": "Voir tous",
-  "Help us serve you better": "Aide-nous à mieux te servir",
   "Next": "Suivant",
+  "Create an account": "Créer un compte",
+  "Let's get you on the journey": "Mettons-nous en route pour le voyage",
   "Feedback & Support": "Commentaires et soutien",
   "Create Custom Journey": "Créer un parcours personnalisé",
   "Template": "Modèle",
@@ -564,11 +568,9 @@
   "You've already used {{userEmail}}.": "Tu as déjà utilisé {{userEmail}}.",
   "Sign in with {{service}} to continue": "Connecte-toi avec {{service}} pour continuer",
   "Please enter your email address": "Saisis ton adresse e-mail",
-  "Log in or Sign up": "Se connecter ou s'inscrire",
-  "No account? We'll create one for you automatically.": "Pas de compte ? Nous en créerons un pour toi automatiquement.",
   "OR": "OU",
   "Enter your email address here": "Saisis ton adresse électronique ici",
-  "Sign in with email": "Inscris-toi avec ton courriel",
+  "Continue with email": "Continuer avec l'email",
   "Enter your password": "Entre ton mot de passe",
   "The email and password you entered don't match": "L'email et le mot de passe que tu as saisis ne correspondent pas",
   "You have entered an incorrect password too many times. Please try again in a few minutes.": "Tu as saisi un mot de passe incorrect trop souvent. Essaie à nouveau dans quelques minutes.",
@@ -589,7 +591,9 @@
   "Sign Up": "S'inscrire",
   "Check your email": "Vérifie ton courrier électronique",
   "Follow the instructions sent to {{userEmail}} to recover your password": "Suis les instructions envoyées à {{userEmail}} pour récupérer ton mot de passe.",
-  "Sign in with {{service}}": "Connecte-toi avec {{service}}",
+  "Continue with {{service}}": "Continue avec {{service}}",
+  "New account": "Nouveau compte",
+  "Log In": "Se connecter",
   "Active": "Actif",
   "Archived": "Archivé",
   "Strategy": "Stratégie",
@@ -644,10 +648,6 @@
   "Members": "Les membres",
   "Custom Domain": "Domaine personnalisé",
   "Rename": "Renommer",
-  "Invite Teammates": "Invite tes coéquipiers",
-  "Invite team members": "Invite les membres de l'équipe",
-  "Continue": "Continue",
-  "Skip": "Sauter",
   "Shared With Me": "Partagé avec moi",
   "More journeys here": "Plus de voyages ici",
   "Journeys are grouped by teams. You can switch between teams by using this dropdown.": "Les voyages sont regroupés par équipes. Tu peux passer d'une équipe à l'autre en utilisant ce menu déroulant.",
@@ -687,13 +687,16 @@
   "Most Relevant": "Le plus pertinent",
   "No template fully matches your search criteria.": "Aucun modèle ne correspond entièrement à tes critères de recherche.",
   "Try using fewer filters or look below for templates related to the categories you've selected to search": "Essaie d'utiliser moins de filtres ou regarde ci-dessous les modèles liés aux catégories que tu as sélectionnées pour la recherche.",
+  "We Like Your Choice!": "Nous aimons ton choix !",
+  "Create a new account or log in to use this template as yours.": "Crée un nouveau compte ou connecte-toi pour utiliser ce modèle comme le tien.",
+  "Login with my account": "Se connecter avec mon compte",
+  "Create a new account": "Créer un nouveau compte",
   "Use This Template": "Utilise ce modèle",
   "Add Journey to Team": "Ajouter Journey à l'équipe",
   "Use this template to make it your journey": "Utilise ce modèle pour en faire ton voyage",
   "Use this template to see more!": "Utilise ce modèle pour en voir plus !",
   "Related Templates": "Modèles apparentés",
-  "Before You Start": "Avant de commencer",
-  "Please review these documents:": "Prends connaissance de ces documents :",
+  "Before you start, please review these documents:": "Avant de commencer, passe en revue ces documents :",
   "Terms of Use": "Conditions d'utilisation",
   "End User License Agreement": "Contrat de licence de l'utilisateur final",
   "Community Guidelines": "Directives pour la communauté",
