--- a/libs/locales/es-ES/apps-journeys-admin.json
+++ b/libs/locales/es-ES/apps-journeys-admin.json
@@ -16,6 +16,7 @@
   "Visitors": "Visitantes",
   "Filters": "Filtros",
   "A Few Questions": "Algunas preguntas",
+  "User Insights": "Opiniones de los usuarios",
   "a question about onboarding form": "una pregunta sobre el formulario de incorporación",
   "Edit Template": "Editar plantilla",
   "Access Denied": "Acceso denegado",
@@ -26,16 +27,18 @@
   "Visitor's Activity": "Actividad del Visitante",
   "Visitor Details": "Detalles del visitante",
   "New Team": "Nuevo equipo",
+  "Create a Team": "Crear un equipo",
   "A question about creating a team for the first time.": "Una pregunta sobre la creación de un equipo por primera vez.",
   "Journey Template": "Plantilla de viaje",
   "Journey Templates": "Plantillas de viaje",
   "Sign In": "Regístrate",
+  "Create New Account or Log in": "Crear una cuenta nueva o iniciar sesión",
+  "A question about sign in": "Una pregunta sobre el inicio de sesión",
   "Terms and Conditions": "Términos y condiciones",
   "A question about the terms and conditions form": "Una pregunta sobre el formulario de términos y condiciones",
   "Required": "Necesario",
-  "Validate NextStep Email": "Validar correo electrónico de NextStep",
   "Verify Your Email": "Verifica tu correo electrónico",
-  "To start making NextSteps journeys": "Para empezar a hacer viajes NextSteps",
+  "Validate NextStep Email": "Validar correo electrónico de NextStep",
   "Email has been sent to this address with a link to verify your account. If you have not received the email after a few minutes, please check your spam folder.": "Se ha enviado un correo electrónico a esta dirección con un enlace para verificar tu cuenta. Si no has recibido el correo electrónico después de unos minutos, comprueba tu carpeta de correo no deseado.",
   "Resend Validation Email": "Reenviar correo de validación",
   "Verify With Code Instead": "Verifica con el código",
@@ -535,8 +538,9 @@
   "Are you sure you want to change language?": "¿Estás seguro de que quieres cambiar de idioma?",
   "Reports": "Informes",
   "See all": "Ver todo",
-  "Help us serve you better": "Ayúdanos a servirte mejor",
   "Next": "Siguiente",
+  "Create an account": "Crear una cuenta",
+  "Let's get you on the journey": "Emprendamos el viaje",
   "Feedback & Support": "Comentarios y apoyo",
   "Create Custom Journey": "Crear viaje personalizado",
   "Template": "Plantilla",
@@ -564,11 +568,9 @@
   "You've already used {{userEmail}}.": "Ya has utilizado {{userEmail}}.",
   "Sign in with {{service}} to continue": "Inicia sesión en {{service}} para continuar",
   "Please enter your email address": "Introduce tu dirección de correo electrónico",
-  "Log in or Sign up": "Iniciar sesión o Registrarse",
-  "No account? We'll create one for you automatically.": "¿No tienes cuenta? Te crearemos una automáticamente.",
   "OR": "O",
   "Enter your email address here": "Introduce aquí tu dirección de correo electrónico",
-  "Sign in with email": "Iniciar sesión con correo electrónico",
+  "Continue with email": "Continuar con el correo electrónico",
   "Enter your password": "Introduce tu contraseña",
   "The email and password you entered don't match": "El correo electrónico y la contraseña que has introducido no coinciden",
   "You have entered an incorrect password too many times. Please try again in a few minutes.": "Has introducido una contraseña incorrecta demasiadas veces. Vuelve a intentarlo dentro de unos minutos.",
@@ -589,7 +591,9 @@
   "Sign Up": "Inscríbete",
   "Check your email": "Comprueba tu correo electrónico",
   "Follow the instructions sent to {{userEmail}} to recover your password": "Sigue las instrucciones enviadas a {{userEmail}} para recuperar tu contraseña",
-  "Sign in with {{service}}": "Entra en {{service}}",
+  "Continue with {{service}}": "Continúa con {{service}}",
+  "New account": "Nueva cuenta",
+  "Log In": "Iniciar sesión",
   "Active": "Activo",
   "Archived": "Archivado",
   "Strategy": "Estrategia",
@@ -644,10 +648,6 @@
   "Members": "Miembros",
   "Custom Domain": "Dominio personalizado",
   "Rename": "Cambia el nombre de",
-  "Invite Teammates": "Invita a compañeros de equipo",
-  "Invite team members": "Invita a los miembros del equipo",
-  "Continue": "Continúa en",
-  "Skip": "Saltar",
   "Shared With Me": "Compartido Conmigo",
   "More journeys here": "Más viajes aquí",
   "Journeys are grouped by teams. You can switch between teams by using this dropdown.": "Los viajes están agrupados por equipos. Puedes cambiar entre equipos utilizando este desplegable.",
@@ -687,13 +687,16 @@
   "Most Relevant": "Más relevantes",
   "No template fully matches your search criteria.": "Ninguna plantilla coincide plenamente con tus criterios de búsqueda.",
   "Try using fewer filters or look below for templates related to the categories you've selected to search": "Prueba a utilizar menos filtros o busca a continuación plantillas relacionadas con las categorías que has seleccionado para buscar",
+  "We Like Your Choice!": "¡Nos gusta tu elección!",
+  "Create a new account or log in to use this template as yours.": "Crea una cuenta nueva o inicia sesión para utilizar esta plantilla como tuya.",
+  "Login with my account": "Iniciar sesión con mi cuenta",
+  "Create a new account": "Crear una cuenta nueva",
   "Use This Template": "Utiliza esta plantilla",
   "Add Journey to Team": "Añadir Viaje al equipo",
   "Use this template to make it your journey": "Utiliza esta plantilla para hacer tu viaje",
   "Use this template to see more!": "¡Utiliza esta plantilla para ver más!",
   "Related Templates": "Plantillas relacionadas",
-  "Before You Start": "Antes de empezar",
-  "Please review these documents:": "Por favor, revisa estos documentos:",
+  "Before you start, please review these documents:": "Antes de empezar, revisa estos documentos:",
   "Terms of Use": "Condiciones de uso",
   "End User License Agreement": "Acuerdo de licencia de usuario final",
   "Community Guidelines": "Directrices comunitarias",
