chore: new translations apps-journeys-admin.json Japanese

--- a/libs/locales/ja-JP/apps-journeys-admin.json
+++ b/libs/locales/ja-JP/apps-journeys-admin.json
@@ -16,6 +16,7 @@
   "Visitors": "訪問者",
   "Filters": "フィルター",
   "A Few Questions": "いくつかの質問",
+  "User Insights": "ユーザーインサイト",
   "a question about onboarding form": "オンボーディングフォームに関する質問",
   "Edit Template": "テンプレート編集",
   "Access Denied": "アクセス拒否",
@@ -26,16 +27,18 @@
   "Visitor's Activity": "ビジター活動",
   "Visitor Details": "ビジター詳細",
   "New Team": "新チーム",
+  "Create a Team": "チームを作る",
   "A question about creating a team for the first time.": "初めてのチーム作りについての質問。",
   "Journey Template": "旅のテンプレート",
   "Journey Templates": "旅のテンプレート",
   "Sign In": "サインイン",
+  "Create New Account or Log in": "新規アカウント作成またはログイン",
+  "A question about sign in": "サインインについての質問",
   "Terms and Conditions": "ご利用条件",
   "A question about the terms and conditions form": "契約条件書に関する質問",
   "Required": "必須",
-  "Validate NextStep Email": "NextStepメールの検証",
   "Verify Your Email": "Eメールの確認",
-  "To start making NextSteps journeys": "NextStepsの旅を始めるには",
+  "Validate NextStep Email": "NextStepメールの検証",
   "Email has been sent to this address with a link to verify your account. If you have not received the email after a few minutes, please check your spam folder.": "あなたのアカウントを確認するためのリンクを含む電子メールがこのアドレスに送信されました。数分経ってもメールが届かない場合は、迷惑メールフォルダをご確認ください。",
   "Resend Validation Email": "バリデーションメールの再送",
   "Verify With Code Instead": "代わりにコードで検証する",
@@ -535,8 +538,9 @@
   "Are you sure you want to change language?": "本当に言語を変更したいのですか？",
   "Reports": "レポート",
   "See all": "すべて見る",
-  "Help us serve you better": "より良いサービスを提供するために",
   "Next": "次のページ",
+  "Create an account": "アカウントの作成",
+  "Let's get you on the journey": "旅に出よう",
   "Feedback & Support": "フィードバック＆サポート",
   "Create Custom Journey": "カスタム・ジャーニーの作成",
   "Template": "テンプレート",
@@ -564,11 +568,9 @@
   "You've already used {{userEmail}}.": "すでに {{userEmail}}。",
   "Sign in with {{service}} to continue": "{{service}} でサインインして続ける",
   "Please enter your email address": "メールアドレスを入力してください",
-  "Log in or Sign up": "ログインまたはサインアップ",
-  "No account? We'll create one for you automatically.": "アカウントをお持ちでないですか？自動的に作成いたします。",
   "OR": "または",
   "Enter your email address here": "メールアドレスを入力してください",
-  "Sign in with email": "Eメールでログイン",
+  "Continue with email": "Eメールを続ける",
   "Enter your password": "パスワードを入力してください",
   "The email and password you entered don't match": "入力したEメールアドレスとパスワードが一致しません。",
   "You have entered an incorrect password too many times. Please try again in a few minutes.": "パスワードの入力が何度も間違っています。数分後にもう一度お試しください。",
@@ -589,7 +591,9 @@
   "Sign Up": "会員登録",
   "Check your email": "メールをチェックする",
   "Follow the instructions sent to {{userEmail}} to recover your password": "{{userEmail}} に送信される指示に従って、パスワードを回復してください。",
-  "Sign in with {{service}}": "{{service}}でログイン",
+  "Continue with {{service}}": "{{service}}。",
+  "New account": "新規アカウント",
+  "Log In": "ログイン",
   "Active": "アクティブ",
   "Archived": "アーカイブ",
   "Strategy": "戦略",
@@ -644,10 +648,6 @@
   "Members": "メンバー",
   "Custom Domain": "カスタムドメイン",
   "Rename": "名前変更",
-  "Invite Teammates": "チームメイトを招待する",
-  "Invite team members": "チームメンバーを招待する",
-  "Continue": "続ける",
-  "Skip": "スキップ",
   "Shared With Me": "シェア・ウィズ・ミー",
   "More journeys here": "その他の旅はこちら",
   "Journeys are grouped by teams. You can switch between teams by using this dropdown.": "ジャーニーはチームごとにグループ化されています。このドロップダウンを使って、チームを切り替えることができます。",
@@ -687,13 +687,16 @@
   "Most Relevant": "最も関連性が高い",
   "No template fully matches your search criteria.": "検索条件に完全に一致するテンプレートはありません。",
   "Try using fewer filters or look below for templates related to the categories you've selected to search": "より少ないフィルタを使用するか、検索するために選択したカテゴリに関連するテンプレートを以下で検索してみてください。",
+  "We Like Your Choice!": "We Like Your Choice！",
+  "Create a new account or log in to use this template as yours.": "このテンプレートをあなたのテンプレートとして使用するには、新しいアカウントを作成するか、ログインしてください。",
+  "Login with my account": "マイアカウントでログイン",
+  "Create a new account": "新しいアカウントを作成する",
   "Use This Template": "このテンプレートを使用する",
   "Add Journey to Team": "ジャーニーをチームに加える",
   "Use this template to make it your journey": "このテンプレートを使って、あなたの旅を作ろう",
   "Use this template to see more!": "もっと見るにはこのテンプレートを使ってください！",
   "Related Templates": "関連テンプレート",
-  "Before You Start": "始める前に",
-  "Please review these documents:": "これらの書類をご確認ください：",
+  "Before you start, please review these documents:": "作業を開始する前に、これらの文書を確認してください：",
   "Terms of Use": "利用規約",
   "End User License Agreement": "エンドユーザー使用許諾契約書",
   "Community Guidelines": "コミュニティ・ガイドライン",
