chore: new translations apps-journeys-admin.json Russian

--- a/libs/locales/ru-RU/apps-journeys-admin.json
+++ b/libs/locales/ru-RU/apps-journeys-admin.json
@@ -16,6 +16,7 @@
   "Visitors": "Посетители",
   "Filters": "Фильтры",
   "A Few Questions": "Несколько вопросов",
+  "User Insights": "Познания пользователя",
   "a question about onboarding form": "вопрос по форме регистрации",
   "Edit Template": "Редактировать шаблон",
   "Access Denied": "Доступ запрещен",
@@ -26,16 +27,18 @@
   "Visitor's Activity": "Активность посетителя",
   "Visitor Details": "Детали посетителя",
   "New Team": "Новая команда",
+  "Create a Team": "Создай команду",
   "A question about creating a team for the first time.": "Вопрос о создании команды впервые.",
   "Journey Template": "Шаблон путешествия",
   "Journey Templates": "Шаблоны путешествий",
   "Sign In": "Войти",
+  "Create New Account or Log in": "Создай новый аккаунт или войди в систему",
+  "A question about sign in": "Вопрос о входе в систему",
   "Terms and Conditions": "Условия и положения",
   "A question about the terms and conditions form": "Вопрос об условиях формы",
   "Required": "Необходимый",
-  "Validate NextStep Email": "Проверь электронную почту NextStep",
   "Verify Your Email": "Проверь свою электронную почту",
-  "To start making NextSteps journeys": "Чтобы начать совершать путешествия NextSteps",
+  "Validate NextStep Email": "Проверь электронную почту NextStep",
   "Email has been sent to this address with a link to verify your account. If you have not received the email after a few minutes, please check your spam folder.": "На этот адрес было отправлено письмо со ссылкой для проверки твоего аккаунта. Если через несколько минут ты не получил письмо, проверь папку со спамом.",
   "Resend Validation Email": "Повторная отправка письма с подтверждением",
   "Verify With Code Instead": "Проверяй с помощью кода",
@@ -535,8 +538,9 @@
   "Are you sure you want to change language?": "Ты уверен, что хочешь сменить язык?",
   "Reports": "Отчеты",
   "See all": "Увидеть все",
-  "Help us serve you better": "Помогите нам лучше обслуживать вас",
   "Next": "Следующий",
+  "Create an account": "Создай аккаунт",
+  "Let's get you on the journey": "Давай отправимся в путешествие",
   "Feedback & Support": "Обратная связь",
   "Create Custom Journey": "Создать индивидуальное путешествие",
   "Template": "Шаблон",
@@ -564,11 +568,9 @@
   "You've already used {{userEmail}}.": "Ты уже использовал {{userEmail}}.",
   "Sign in with {{service}} to continue": "Чтобы продолжить, войди на сайт {{service}} .",
   "Please enter your email address": "Введите свой адрес электронной почты",
-  "Log in or Sign up": "Войди или зарегистрируйся",
-  "No account? We'll create one for you automatically.": "Нет аккаунта? Мы создадим его для тебя автоматически.",
   "OR": "ИЛИ",
   "Enter your email address here": "Введите свой адрес электронной почты здесь",
-  "Sign in with email": "Авторизуйся с помощью электронной почты",
+  "Continue with email": "Продолжайте работать с электронной почтой",
   "Enter your password": "Введите пароль",
   "The email and password you entered don't match": "Введенные тобой электронная почта и пароль не совпадают",
   "You have entered an incorrect password too many times. Please try again in a few minutes.": "Ты слишком много раз вводил неправильный пароль. Попробуй повторить попытку через несколько минут.",
@@ -589,7 +591,9 @@
   "Sign Up": "Подпишись",
   "Check your email": "Проверь свою электронную почту",
   "Follow the instructions sent to {{userEmail}} to recover your password": "Следуй инструкциям, присланным на {{userEmail}} , чтобы восстановить пароль.",
-  "Sign in with {{service}}": "Авторизуйся с помощью {{service}}.",
+  "Continue with {{service}}": "Продолжай {{service}}",
+  "New account": "Новый аккаунт",
+  "Log In": "Войти",
   "Active": "Активный",
   "Archived": "Архивировано",
   "Strategy": "Стратегия",
@@ -644,10 +648,6 @@
   "Members": "Члены",
   "Custom Domain": "Пользовательский домен",
   "Rename": "Переименовать",
-  "Invite Teammates": "Пригласить товарищей по команде",
-  "Invite team members": "Пригласить членов команды",
-  "Continue": "Продолжать",
-  "Skip": "Пропускать",
   "Shared With Me": "Поделился со мной",
   "More journeys here": "Больше путешествий здесь",
   "Journeys are grouped by teams. You can switch between teams by using this dropdown.": "Путешествия группируются по командам. ",
@@ -687,13 +687,16 @@
   "Most Relevant": "Наиболее актуальными",
   "No template fully matches your search criteria.": "Ни один шаблон полностью не соответствует вашим критериям поиска.",
   "Try using fewer filters or look below for templates related to the categories you've selected to search": "Попробуйте использовать меньше фильтров или посмотрите ниже шаблоны, относящиеся к категориям, которые вы выбрали для поиска.",
+  "We Like Your Choice!": "Нам нравится твой выбор!",
+  "Create a new account or log in to use this template as yours.": "Создай новый аккаунт или войди в него, чтобы использовать этот шаблон как свой.",
+  "Login with my account": "Войдите в мой аккаунт",
+  "Create a new account": "Создай новый аккаунт",
   "Use This Template": "Используйте этот шаблон",
   "Add Journey to Team": "Добавь Journey в команду",
   "Use this template to make it your journey": "Используйте этот шаблон, чтобы сделать это путешествие своим",
   "Use this template to see more!": "Используй этот шаблон, чтобы увидеть больше!",
   "Related Templates": "Связанные шаблоны",
-  "Before You Start": "Прежде чем ты начнешь",
-  "Please review these documents:": "Пожалуйста, ознакомьтесь с этими документами:",
+  "Before you start, please review these documents:": "Прежде чем приступить к работе, ознакомься с этими документами:",
   "Terms of Use": "Условия использования",
   "End User License Agreement": "Лицензионное соглашение с конечным пользователем",
   "Community Guidelines": "Правила сообщества",
